examples/test/testpolicy3378.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3378
  namespace: namespace217
spec:
  podSelector:
    matchLabels:
      key21: value14
      key42: value36
      key35: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value37
          key41: value29
      podSelector:
        matchLabels:
          key12: value36
          key45: value29
          key49: value5
